# Octree-GS

./: .gitignore  pyproject.toml  pyproject.toml.template  render.py  train.py
arguments/: __init__.py  old.py
config/: config.yaml  trunk.yaml
run_scripts/: test.sh
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
submodules/diff-gaussian-rasterization/: pyproject.toml
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization.egg-info/: PKG-INFO  SOURCES.txt
submodules/simple-knn/: pyproject.toml  simple_knn.cu
utils/: camera_utils.py
