[project]
name = "diff-gaussian-rasterization"
version = "0.1.0"
authors = [
    { name = "Wang Yingqi", email = "1321279670@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "torch",
    "torchvision",
    "torchaudio",
    "pybind11",
]
build-backend = "setuptools.build_meta"
